fixed oversized sideways scroll issue when on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 html {
   background-image: url('./custom-pics/sunset.jpg');
-  min-height: 1000px;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
